// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`editor is updated with new text if it does not match current selection 1`] = `
{
  "blockMap": Map {
    "a" => {
      "characterList": [
        {
          "entity": null,
          "style": Set {},
        },
        {
          "entity": null,
          "style": Set {},
        },
        {
          "entity": null,
          "style": Set {},
        },
        {
          "entity": null,
          "style": Set {},
        },
        {
          "entity": null,
          "style": Set {},
        },
        {
          "entity": null,
          "style": Set {},
        },
        {
          "entity": null,
          "style": Set {},
        },
      ],
      "data": {},
      "depth": 0,
      "key": "a",
      "text": "Orsenal",
      "type": "unstyled",
    },
  },
  "entityMap": Map {},
  "selectionAfter": {
    "anchorKey": "a",
    "anchorOffset": 1,
    "focusKey": "a",
    "focusOffset": 1,
    "hasFocus": false,
    "isBackward": false,
  },
  "selectionBefore": {
    "anchorKey": "a",
    "anchorOffset": 0,
    "focusKey": "a",
    "focusOffset": 1,
    "hasFocus": false,
    "isBackward": false,
  },
}
`;

exports[`editor selectionstate is updated if new text matches current selection 1`] = `
{
  "anchorKey": "a",
  "anchorOffset": 1,
  "focusKey": "a",
  "focusOffset": 1,
  "hasFocus": false,
  "isBackward": false,
}
`;

exports[`editor selectionstate is updated if new text matches current selection and user selected backwards 1`] = `
{
  "anchorKey": "a",
  "anchorOffset": 1,
  "focusKey": "a",
  "focusOffset": 1,
  "hasFocus": false,
  "isBackward": false,
}
`;
